# xflow

./: .gitignore  Cargo.toml  LICENSE
examples/: drop_output_example.yaml  generate_example.yaml  input_data.csv  kafka_example.yaml  message.proto  mqtt_example.yaml  output.txt  protobuf_example.yaml  sql_input_example.yaml  stream_data.json  stream_sql_example.yaml  test_config.yaml  test_input.txt
src/: config.rs  lib.rs  main.rs  metrics.rs  plugin.rs
src/buffer/: disk.rs  memory.rs  mod.rs  redis.rs
src/input/: file.rs  generate.rs  http.rs  kafka.rs  memory.rs  mod.rs  mqtt.rs  sql.rs
src/output/: drop.rs  file.rs  http.rs  kafka.rs  mod.rs  mqtt.rs  redis.rs  sql.rs  stdout.rs
src/pipeline/: mod.rs
src/processor/: batch.rs  filter.rs  grok.rs  json.rs  mod.rs  protobuf.rs  sql.rs  stream_sql.rs
src/processor/udf/: json.rs
src/stream/: mod.rs
