[package]
name = "rtflow"
version = "0.1.0"
edition = "2021"
description = "高性能Rust流处理引擎"
authors = ["Chen Quan"]

[dependencies]
# 异步运行时
tokio = { version = "1.28", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# 序列化/反序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# 错误处理
thiserror = "1.0"
anyhow = "1.0"

# 日志和监控
tracing = "0.1"
tracing-subscriber = "0.3"
prometheus = "0.13"

# 数据处理
datafusion = "45.0.0"

# 配置和插件系统
toml = "0.7"
dyn-clone = "1.0"
lazy_static = "1.4"
regex = "1.8"

# HTTP客户端/服务器
axum = "0.6"
reqwest = { version = "0.11", features = ["json"] }

# 命令行工具
clap = { version = "4.3", features = ["derive"] }
colored = "2.0"
flume = "=0.10.12"
